var searchData=
[
  ['jnomicscompute',['JnomicsCompute',['../structJnomicsCompute.html',1,'']]],
  ['jnomicsdata',['JnomicsData',['../structJnomicsData.html',1,'']]],
  ['jnomicsthriftexception',['JnomicsThriftException',['../structJnomicsThriftException.html',1,'']]],
  ['jnomicsthriftfilestatus',['JnomicsThriftFileStatus',['../structJnomicsThriftFileStatus.html',1,'']]],
  ['jnomicsthrifthandle',['JnomicsThriftHandle',['../structJnomicsThriftHandle.html',1,'']]],
  ['jnomicsthriftjobid',['JnomicsThriftJobID',['../structJnomicsThriftJobID.html',1,'']]],
  ['jnomicsthriftjobstatus',['JnomicsThriftJobStatus',['../structJnomicsThriftJobStatus.html',1,'']]],
  ['job_5fid',['job_id',['../structJnomicsThriftJobID.html#a6a2ba07ba32731e7b2395b8951861a9f',1,'JnomicsThriftJobID::job_id()'],['../structJnomicsThriftJobStatus.html#a87728b843c951805d300c44feeb9c226',1,'JnomicsThriftJobStatus::job_id()']]]
];
