var searchData=
[
  ['read',['read',['../structJnomicsData.html#af8e628aaeae6a1ae0d3b18fa8406b6dc',1,'JnomicsData']]],
  ['reduceprogres',['reduceProgres',['../structJnomicsThriftJobStatus.html#ad82e0985767002208c5d7f67eb921d68',1,'JnomicsThriftJobStatus']]],
  ['remove',['remove',['../structJnomicsData.html#ae409c026cf142db796eedc5ef91fb69d',1,'JnomicsData']]],
  ['replication',['replication',['../structJnomicsThriftFileStatus.html#aa9473af24aff0cdb10c1d24f6648029b',1,'JnomicsThriftFileStatus']]],
  ['running_5fstate',['running_state',['../structJnomicsThriftJobStatus.html#a3cb86bc3948674b784f5bb023d606f5a',1,'JnomicsThriftJobStatus']]]
];
