var searchData=
[
  ['jnomicscompute',['JnomicsCompute',['../structJnomicsCompute.html',1,'']]],
  ['jnomicsdata',['JnomicsData',['../structJnomicsData.html',1,'']]],
  ['jnomicsthriftexception',['JnomicsThriftException',['../structJnomicsThriftException.html',1,'']]],
  ['jnomicsthriftfilestatus',['JnomicsThriftFileStatus',['../structJnomicsThriftFileStatus.html',1,'']]],
  ['jnomicsthrifthandle',['JnomicsThriftHandle',['../structJnomicsThriftHandle.html',1,'']]],
  ['jnomicsthriftjobid',['JnomicsThriftJobID',['../structJnomicsThriftJobID.html',1,'']]],
  ['jnomicsthriftjobstatus',['JnomicsThriftJobStatus',['../structJnomicsThriftJobStatus.html',1,'']]]
];
