var searchData=
[
  ['reduceprogres',['reduceProgres',['../structJnomicsThriftJobStatus.html#ad82e0985767002208c5d7f67eb921d68',1,'JnomicsThriftJobStatus']]],
  ['replication',['replication',['../structJnomicsThriftFileStatus.html#aa9473af24aff0cdb10c1d24f6648029b',1,'JnomicsThriftFileStatus']]],
  ['running_5fstate',['running_state',['../structJnomicsThriftJobStatus.html#a3cb86bc3948674b784f5bb023d606f5a',1,'JnomicsThriftJobStatus']]]
];
